--- a/BloomfieldGreenhouse/css/landing2.css
+++ b/BloomfieldGreenhouse/css/landing2.css
@@ -15,8 +15,17 @@ body {
     display: flex;
     align-items: center;
     color: white;
-}
 
+    max-width: 960px;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    margin: auto;
+    text-align: center;
+
+    border: 1px solid white;
+    z-index: 200;
+}
+/*
 .container {
     max-width: 960px;
     padding-left: 1rem;
@@ -24,13 +33,13 @@ body {
     margin: auto;
     text-align: center;
 }
-
+*/
 .fullscreen-video-wrap {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     overflow: hidden;
 }
 
